# vectorize_engine

./: Cargo.toml  README.md
dataframe/: Cargo.toml
dataframe/doc/: plan.md  prompt1.md  qir-design.md  query-plan-design.md
dataframe/src/: datatype.rs  lib.rs
dataframe/src/qir/: macros.rs  mod.rs
dataframe/src/qir/tests/: example1_test.rs  macros_test.rs
dataframe/tests/: query1.rs
doc/: datafusion.md
links/: datafusion-duckdb-benchmark
playgrounds/try_arrow/: Cargo.toml  readme.md  users.arrow
playgrounds/try_arrow/src/: another_array.rs  main.rs
playgrounds/try_async/: Cargo.toml
playgrounds/try_async/src/: main.rs
playgrounds/try_cpu/: Cargo.toml
playgrounds/try_datafusion/: Cargo.toml
playgrounds/try_datafusion/data/: access_log.csv  orders.csv  products.csv  users.csv
playgrounds/try_datafusion/scripts/: bench_clickbench.nu
playgrounds/try_datafusion/src/: main.rs
playgrounds/try_parquet/: Cargo.toml
playgrounds/try_parquet/src/: main.rs
poc/try_arrow/: Cargo.toml  readme.md
poc/try_arrow/spec/: File.fbs
poc/try_arrow/src/: another_array.rs  main.rs
poc/vector_example1/: Cargo.toml  Readme.md
poc/vector_example1/benches/: my_benchmark.rs
poc/vector_example1/src/: lib.rs  main.rs  sort2.rs  vector.rs
prototype/: Cargo.toml
src_old/: ast.rs  main.rs
